--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fuck Off ™️</title>
     <link rel="icon" type="image/png" href="assets/ico.png">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Fuck Off ™️">
+    <meta property="og:description" content="Fuck your shitty Biolink">
+    <meta property="og:url" content="https://fucktyrants.github.io/">
+    <meta property="og:image" content="https://fucktyrants.github.io/assets/def_profile.gif">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Fuck Off ™️">
+    <meta name="twitter:description" content="Fuck your shitty Biolink">
+    <meta name="twitter:image" content="https://fucktyrants.github.io/assets/def_profile.gif">
     <style>
         * {
             margin: 0;
