--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@
             <div class="profile-footer">
 
                 <div id="skills-block">
-                    <h2 class="skills-title">Programming Skills</h2>
+                    <h2 class="skills-title">Languages</h2>
                     <div class="skill">
                         <div class="skill-name">
                             <img src="assets/cpp.png" alt="C++" class="skill-icon">
@@ -1035,7 +1035,7 @@
                     </div>
                     <div class="skill">
                         <div class="skill-name">
-                            <img src="assets/assembly.png" alt="Assembly" class="skill-icon">
+                            <img src="assets/prolog.png" alt="Prolog" class="skill-icon">
                             <span>Prolog</span>
                             <span>85%</span>
                         </div>
@@ -1045,7 +1045,7 @@
                     </div>
                     <div class="skill">
                         <div class="skill-name">
-                            <img src="assets/prolog.png" alt="Assembly" class="skill-icon">
+                            <img src="assets/assembly.png" alt="Assembly" class="skill-icon">
                             <span>Assembly</span>
                             <span>72%</span>
                         </div>
