--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@
             backdrop-filter: blur(5px);
         }
 
+        .profile-quote {
+            align-self: center;
+            margin: 4px auto 1px;
+            color: rgba(255, 255, 255, 0.8);
+            font-size: 12px;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 3px 10px;
+            border-radius: 10px;
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(5px);
+            text-align: center;
+            max-width: 80%;
+        }
+
         #hacker-overlay,
         #snow-overlay {
             position: fixed;
@@ -228,7 +242,7 @@
             transform: translate(-50%, -50%);
             width: 820px;
             min-height: 332px;
-            background: rgba(0, 0, 0, 0.56);
+            background: rgba(0, 0, 0, 0.4);
             border: 1px solid rgba(255, 255, 255, 0.2);
             padding: 20px;
             border-radius: 15px;
@@ -516,7 +530,7 @@
         #skills-block {
             position: relative;
             width: 100%;
-            background: rgba(0, 0, 0, 0.56);
+            background: rgba(0, 0, 0, 0.4);
             border: 1px solid rgba(255, 255, 255, 0.2);
             padding: 16px;
             border-radius: 12px;
@@ -751,6 +765,7 @@
             color: #fff;
             text-align: center;
         }
+
 
 
         @media (max-width: 430px) {
@@ -1025,6 +1040,8 @@
                     <div id="profile-bio"></div>
                 </div>
             </div>
+
+            <div class="profile-quote">𝕵𝖊𝖘𝖚𝖘, 𝕾𝖔𝖓 𝖔𝖋 𝕯𝖆𝖛𝖎𝖉, 𝖍𝖆𝖛𝖊 𝖒𝖊𝖗𝖈𝖞 𝖔𝖓 𝖒𝖊 𝖆 𝖘𝖎𝖓𝖓𝖊𝖗.</div>
 
             <div class="bio-separator"></div>
 
