--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             z-index: 20;
             color: rgba(255, 255, 255, 0.85);
             font-size: 14px;
-            background: rgba(0, 0, 0, 0.6);
+            background: rgba(0, 0, 0, 0.3);
             padding: 6px 10px;
             border-radius: 10px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(255, 255, 255, 0.15);
             backdrop-filter: blur(5px);
         }
 
@@ -91,10 +91,10 @@
             margin: 4px auto 1px;
             color: rgba(255, 255, 255, 0.8);
             font-size: 12px;
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(0, 0, 0, 0.25);
             padding: 3px 10px;
             border-radius: 10px;
-            border: 1px solid rgba(255, 255, 255, 0.15);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             backdrop-filter: blur(5px);
             text-align: center;
             max-width: 80%;
@@ -124,7 +124,7 @@
             display: flex;
             gap: 10px;
             z-index: 20;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.35);
             padding: 5px 10px;
             border-radius: 20px;
             backdrop-filter: blur(5px);
@@ -211,7 +211,7 @@
             align-items: center;
             gap: 15px;
             z-index: 20;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.35);
             padding: 8px 12px;
             border-radius: 20px;
             backdrop-filter: blur(5px);
@@ -224,11 +224,11 @@
             position: fixed;
             right: 20px;
             bottom: 20px;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.35);
             color: #fff;
             padding: 8px 12px;
             border-radius: 10px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(255, 255, 255, 0.15);
             font-size: 12px;
             z-index: 25;
             backdrop-filter: blur(5px);
@@ -242,7 +242,7 @@
             transform: translate(-50%, -50%);
             width: 820px;
             min-height: 332px;
-            background: rgba(0, 0, 0, 0.4);
+            background: rgba(0, 0, 0, 0.2);
             border: 1px solid rgba(255, 255, 255, 0.2);
             padding: 20px;
             border-radius: 15px;
@@ -285,7 +285,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(0, 0, 0, 0.25);
             /* %50 opak */
             z-index: 0;
             pointer-events: none;
@@ -413,7 +413,7 @@
         }
 
         .badge-box-inner {
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(0, 0, 0, 0.25);
             padding: 5px;
             border-radius: 12px;
             display: flex;
@@ -461,7 +461,7 @@
             display: flex;
             align-items: center;
             gap: 8px;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(255, 255, 255, 0.05);
             padding: 8px 15px;
             border-radius: 20px;
             font-size: 14px;
@@ -530,8 +530,8 @@
         #skills-block {
             position: relative;
             width: 100%;
-            background: rgba(0, 0, 0, 0.4);
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            background: rgba(0, 0, 0, 0.2);
+            border: 1px solid rgba(255, 255, 255, 0.15);
             padding: 16px;
             border-radius: 12px;
             display: flex;
@@ -568,7 +568,7 @@
 
         .skill-bar-container {
             height: 10px;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(255, 255, 255, 0.06);
             border-radius: 5px;
             overflow: hidden;
         }
@@ -606,9 +606,9 @@
         }
 
         #results-theme {
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.35);
             color: white;
-            border: 1px solid rgba(255, 255, 255, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.25);
             padding: 8px 15px;
             border-radius: 20px;
             cursor: pointer;
@@ -619,13 +619,13 @@
         }
 
         #results-theme:hover {
-            background: rgba(0, 0, 0, 0.9);
+            background: rgba(0, 0, 0, 0.5);
             border-color: rgba(255, 255, 255, 0.8);
         }
 
         #results-hint {
             position: absolute;
-            background: rgba(0, 0, 0, 0.8);
+            background: rgba(0, 0, 0, 0.5);
             color: white;
             padding: 8px 12px;
             border-radius: 10px;
@@ -635,7 +635,7 @@
             pointer-events: none;
             z-index: 25;
             backdrop-filter: blur(5px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(255, 255, 255, 0.15);
         }
 
         #results-hint::before {
@@ -646,7 +646,7 @@
             transform: translateX(-50%);
             border-width: 0 10px 10px 10px;
             border-style: solid;
-            border-color: transparent transparent rgba(0, 0, 0, 0.8) transparent;
+            border-color: transparent transparent rgba(0, 0, 0, 0.5) transparent;
         }
 
 
@@ -750,7 +750,7 @@
             left: 0;
             width: 100%;
             height: 100vh;
-            background: rgba(0, 0, 0, 0.9);
+            background: rgba(0, 0, 0, 0.6);
             backdrop-filter: blur(10px);
             display: flex;
             align-items: center;
@@ -1013,7 +1013,7 @@
 
 
     <div id="start-screen">
-        <div id="start-text"> Why Are You Here?</div>
+        <div id="start-text"> Click Me 😎</div>
     </div>
 
     <div class="container">
@@ -1135,10 +1135,13 @@
                     <a href="https://discord.com/users/1232545312233619462" target="_blank">
                         <img src="assets/discord.png" alt="Discord" class="social-icon">
                     </a>
+                    <a href="https://x.com/comms_____up" target="_blank">
+                        <img src="assets/twitter.png" alt="Twitter" class="social-icon">
+                    </a>
                     <a href="mailto:noreply@cia.contact" target="_blank">
                         <img src="assets/whor.email.png" alt="Email" class="social-icon">
                     </a>
-                    <a href="https://zws.im/󠁪󠁲󠁦󠁱󠁯󠁶󠁵" target="_blank">
+                    <a href="https://zws.im/" target="_blank">
                         <img src="assets/doxbin.png" alt="My Dox" class="social-icon">
                     </a>
                 </div>
