--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <meta property="og:title" content="Fuck Off ™️">
     <meta property="og:description" content="Fuck your shitty Biolink">
     <meta property="og:url" content="https://fucktyrants.github.io/">
-    <meta property="og:image" content="https://fucktyrants.github.io/assets/def_profile.gif">
+    <meta property="og:image" content="https://fucktyrants.github.io/assets/banner-photo-embed.gif">
+    <meta property="og:image:type" content="image/gif">
+    <meta property="og:image:alt" content="Site banner">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Fuck Off ™️">
     <meta name="twitter:description" content="Fuck your shitty Biolink">
-    <meta name="twitter:image" content="https://fucktyrants.github.io/assets/def_profile.gif">
+    <meta name="twitter:image" content="https://fucktyrants.github.io/assets/banner-photo-embed.gif">
     <style>
         * {
             margin: 0;
