--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Fuck Off ™️">
     <meta property="og:description" content="Fuck your shitty Biolink">
-    <meta property="og:url" content="https://fuckyourshittybiolink.netlify.app/">
-    <meta property="og:image" content="https://fuckyourshittybiolink.netlify.app/assets/banner-photo-embed.gif">
-    <meta property="og:image:secure_url" content="https://fuckyourshittybiolink.netlify.app/assets/banner-photo-embed.gif">
+    <meta property="og:url" content="https://0xpsychosecurity.github.io/">
+    <meta property="og:image" content="https://0xpsychosecurity.github.io/assets/banner-photo-embed.gif">
+    <meta property="og:image:secure_url" content="https://0xpsychosecurity.github.io/assets/banner-photo-embed.gif">
     <meta property="og:image:type" content="image/gif">
     <meta property="og:image:alt" content="Site banner">
     <meta property="og:image:width" content="1200">
@@ -35,7 +35,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Fuck Off ™️">
     <meta name="twitter:description" content="Fuck your shitty Biolink">
-    <meta name="twitter:image" content="https://fuckyourshittybiolink.netlify.app/assets/banner-photo-embed.gif">
+    <meta name="twitter:image" content="https://0xpsychosecurity.github.io/assets/banner-photo-embed.gif">
     <style>
         * {
             margin: 0;
