--- a/index.html
+++ b/index.html
@@ -1076,6 +1076,10 @@
 
                                     </div>
                                     <div class="badge-container">
+                                        <img src="assets/templar-cross.png" alt="Templar Cross" class="badge">
+
+                                    </div>
+                                    <div class="badge-container">
                                         <img src="assets/quests.png" alt="Quests" class="badge">
 
                                     </div>
@@ -1087,7 +1091,9 @@
                                         <img src="assets/discord-golden-bug-hunter-.png" alt="Golden Bug Hunter" class="badge">
 
                                     </div>
-
+                                    <div class="badge-container">
+<img src="assets/g59.png" alt="$B$" class="badge">
+ </div>
                                 </div>
                             </div>
                         </div>
@@ -1103,16 +1109,6 @@
                     <h2 class="skills-title">Languages</h2>
                     <div class="skill">
                         <div class="skill-name">
-                            <img src="assets/cpp.png" alt="C++" class="skill-icon">
-                            <span>C++</span>
-                            <span>100%</span>
-                        </div>
-                        <div class="skill-bar-container">
-                            <div id="seeplusplus-bar" class="skill-bar"></div>
-                        </div>
-                    </div>
-                    <div class="skill">
-                        <div class="skill-name">
                             <img src="assets/GCodeblk1.png" alt="G-Code (CNC Code)" class="skill-icon">
                             <span>G-Code (CNC Code)</span>
                             <span>100%</span>
@@ -1125,7 +1121,7 @@
                         <div class="skill-name">
                             <img src="assets/prolog.png" alt="Prolog" class="skill-icon">
                             <span>Prolog</span>
-                            <span>85%</span>
+                            <span>63%</span>
                         </div>
                         <div class="skill-bar-container">
                             <div id="prolog-bar" class="skill-bar"></div>
@@ -1133,9 +1129,19 @@
                     </div>
                     <div class="skill">
                         <div class="skill-name">
+                            <img src="assets/cpp.png" alt="C++" class="skill-icon">
+                            <span>C++</span>
+                            <span>27%</span>
+                        </div>
+                        <div class="skill-bar-container">
+                            <div id="seeplusplus-bar" class="skill-bar"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill-name">
                             <img src="assets/assembly.png" alt="Assembly" class="skill-icon">
                             <span>Assembly</span>
-                            <span>72%</span>
+                            <span>12%</span>
                         </div>
                         <div class="skill-bar-container">
                             <div id="assembly-bar" class="skill-bar"></div>
@@ -1161,6 +1167,9 @@
                     </a>
                     <a href="https://zws.im/" target="_blank">
                         <img src="assets/doxbin.png" alt="My Dox" class="social-icon">
+                    </a>
+                    <a href="https://odysee.com/@cumfart:3?view=content" target="_blank">
+                        <img src="assets/odysee.png" alt="Odysee" class="social-icon">
                     </a>
                 </div>
 
@@ -1210,7 +1219,7 @@
                 <input id="transparency-slider" hidden>
             </div>
         </div>
-        <div id="ip-box">Use a VPN retard</div>
+        <div id="ip-box">Grab IP Failed, Nice one!</div>
     </div>
 
 
