--- a/index_obfuscated.html
+++ b/index_obfuscated.html
@@ -284,6 +284,6 @@
     <audio id="car-music" loop>
         <source src="assets/car.mp3" type="audio/mpeg">
     </audio>
-    <script src="obfuscated.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
