--- a/index_obfuscated.html
+++ b/index_obfuscated.html
@@ -24,8 +24,9 @@
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Fuck Off ™️">
-    <meta name="twitter:description" content="Fuck your shitty Biolink">
+    <meta name="twitter:description" content="Internet Kingpin">
     <meta name="twitter:image" content="https://0xpsychosecurity.github.io/assets/banner-photo-embed.gif">
+    <meta name="description" content="Internet Kingpin">
     <style>
         *{margin:0;padding:0;box-sizing:border-box;font-family:'Courier New',monospace}
         ._0x1{position:fixed;width:40px;height:40px;background:url('') no-repeat center center;background-size:contain;pointer-events:none;z-index:9999;transform:translate(-50%,-50%)}
