--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
         </div>
 
 
-        <div id="profile-block">
+        <div id="profile-block" class="profile-border">
             <div class="profile-header">
 
 
@@ -1108,7 +1108,7 @@
             <div class="bio-separator"></div>
             <div class="profile-footer">
 
-                <div id="skills-block">
+                <div id="skills-block" class="profile-border">
                     <h2 class="skills-title">Languages</h2>
                     <div class="skill">
                         <div class="skill-name">
@@ -1222,7 +1222,7 @@
                 <input id="transparency-slider" hidden>
             </div>
         </div>
-        <div id="ip-box">Grab IP Failed, Nice one!</div>
+        <div id="ip-box" class="profile-border">Grab IP Failed, Nice one!</div>
     </div>
 
 
