--- a/index.html
+++ b/index.html
@@ -1037,7 +1037,7 @@
 
 
     <div id="start-screen">
-        <div id="start-text"> Click Me 😎</div>
+        <div id="start-text"> Hi Monkey :P</div>
     </div>
 
     <div class="container">
