--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            z-index: 1;
+            z-index: -1;
+            display: none;
             pointer-events: none;
         }
 
@@ -729,6 +730,10 @@
             background-size: 400% 400%;
             animation: rainbow-border 8s linear infinite;
             z-index: -1;
+            mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+            mask-composite: xor;
+            -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+            -webkit-mask-composite: xor;
         }
 
         .glitch {
