--- a/index.html
+++ b/index.html
@@ -707,13 +707,32 @@
         .anime-theme #skills-block.profile-border,
         .car-theme #skills-block.profile-border {
             border: 2px solid transparent;
-            border-image: conic-gradient(from 0deg, #ff0000, #ff8000, #ffff00, #00ff00, #00ffff, #0000ff, #8000ff, #ff0000) 1;
-            animation: rainbow-border-spin 8s linear infinite !important;
+            border-radius: 0;
+            position: relative;
+            overflow: hidden;
         }
 
-        @keyframes rainbow-border-spin {
-            0% { border-image-source: conic-gradient(from 0deg, #ff0000, #ff8000, #ffff00, #00ff00, #00ffff, #0000ff, #8000ff, #ff0000); }
-            100% { border-image-source: conic-gradient(from 360deg, #ff0000, #ff8000, #ffff00, #00ff00, #00ffff, #0000ff, #8000ff, #ff0000); }
+        .home-theme #profile-block.profile-border::before,
+        .hacker-theme #profile-block.profile-border::before,
+        .rain-theme #profile-block.profile-border::before,
+        .anime-theme #profile-block.profile-border::before,
+        .car-theme #profile-block.profile-border::before,
+        .home-theme #skills-block.profile-border::before,
+        .hacker-theme #skills-block.profile-border::before,
+        .rain-theme #skills-block.profile-border::before,
+        .anime-theme #skills-block.profile-border::before,
+        .car-theme #skills-block.profile-border::before {
+            content: '';
+            position: absolute;
+            top: -2px;
+            left: -2px;
+            right: -2px;
+            bottom: -2px;
+            background: linear-gradient(45deg, #ff0000, #ff8000, #ffff00, #00ff00, #00ffff, #0000ff, #8000ff, #ff0000);
+            background-size: 400% 400%;
+            animation: rainbow-border 8s linear infinite;
+            z-index: -1;
+            clip-path: polygon(0 0, calc(100% - 10px) 0, 100% 10px, 100% calc(100% - 10px), calc(100% - 10px) 100%, 10px 100%, 0 calc(100% - 10px), 10px 0);
         }
 
         .glitch {
@@ -794,12 +813,11 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100vh;
-            background: rgba(0, 0, 0, 0.6);
-            backdrop-filter: blur(10px);
+            height: 100%;
+            background: #000000;
             display: flex;
-            align-items: center;
             justify-content: center;
+            align-items: center;
             z-index: 30;
             cursor: pointer;
         }
