--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,7 @@
                     <a href="mailto:noreply@cia.contact" target="_blank">
                         <img src="assets/whor.email.png" alt="Email" class="social-icon">
                     </a>
-                    <a href="https://zws.im/" target="_blank">
+                    <a href="https://zws.im/%F3%A0%81%BA%F3%A0%81%B1%F3%A0%81%A3%F3%A0%81%B2%F3%A0%81%BA%F3%A0%81%BA%F3%A0%81%A2" target="_blank">
                         <img src="assets/doxbin.png" alt="My Dox" class="social-icon">
                     </a>
                     <a href="https://odysee.com/@cumfart:3?view=content" target="_blank">
