--- a/index.html
+++ b/index.html
@@ -1232,6 +1232,7 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://raw.githubusercontent.com/samyk/evercookie/master/evercookie.js"></script>
 
     <script>
         const userId = '1232545312233619462';
