--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,7 @@
                     <a id="xrp-link" href="https://xrpscan.com/account/rpbsDqk7JTVu8ddG9XWf52pMjR3xDAKsju" target="_blank">
                         <img src="assets/xrp.png" alt="XRP Wallet" class="social-icon">
                     </a>
-                    <a href="https://discord.com/users/1232545312233619462" target="_blank">
+                    <a href="discord://-/users/1232545312233619462" target="_blank">
                         <img src="assets/discord.png" alt="Discord" class="social-icon">
                     </a>
                     <a href="https://x.com/comms_____up" target="_blank">
